New updated version

--- a/ANA-EXOT-2019-32-INT1.tex
+++ b/ANA-EXOT-2019-32-INT1.tex
@@ -42,6 +42,7 @@
 \usepackage{rotating}
 \usepackage{todonotes} % Add '[disable]' option to mask them
 \usepackage{xcolor}
+\usepackage{verbatim}
 %-------------------------------------------------------------------------------
 % Style file with biblatex options for ATLAS documents.
 \usepackage{atlasbiblatex}
