--- a/include/04-QGselection.tex
+++ b/include/04-QGselection.tex
@@ -129,7 +129,7 @@ in Section~\ref{qcdsamps}.
 
 \subsubsection{Signals that decay to quark-quark.}
 
-The significance for signals that decay to a quark anti-quark pair are estimated using \Zprime\ models (Section~\ref{sec:Zprime}) using 
+The significance for signals that decay to a quark anti-quark pair are estimated using \Zprime\ models (Section~\ref{subsec:MCZprimeSamples}) using 
 \begin{equation}
 S = N_S \sum_i{ \dfrac{ f_{{qq}_i}\epsilon_{qQ}^2 + f_{{qg}_i}\epsilon_{qQ}\epsilon_{gQ} + f_{{gg}_i}\epsilon_{gQ}^2  } {\sqrt{ B_{{qq}_i}\epsilon_{qQ}^2 + B_{{qg}_i}\epsilon_{qQ}\epsilon_{gQ} + B_{{gg}_i}\epsilon_{gQ}^2  }}}
 \end{equation}
