--- a/include/05-Optimisation.tex
+++ b/include/05-Optimisation.tex
@@ -36,9 +36,6 @@ $|\ystar| < 0.6$. Figure \ref{fig: string significance as a function of y* cut} 
         \label{fig: string significance as a function of y* cut}
 \end{figure}
 
-
-
-
 \subsection{dijet mass turn-on}
 \label{section: dijet mass turn-on}
 
@@ -67,42 +64,19 @@ Figure \ref{fig: mass turn-on yStar 0.6} shows the efficiencies as a function of
         \label{fig: mass turn-on yStar 0.8}
 \end{figure}
 
-\subsection{Baseline selection}
-\label{sec:base_selection}
-The baseline event selection is applied for all signal regions and
-the cuts applied are:
-\begin{itemize}
-\item Good Run List (GRL): Requirement that all relevant detectors were in a good state ready for physics. The GRLs used for this analysis are:
-	\begin{itemize}
-		%\item 2015(3.2\,\ifb): data15\_13TeV.periodAllYear\_DetStatus-v89-pro21-02\_Unknown\_PHYS\_ \newline StandardGRL\_All\_Good\,\_25ns.xml
-		%\item 2016(32.97\,\ifb): data16\_13TeV.periodAllYear\_DetStatus-v89-pro21-01\_DQDefects-00-02-04\_ \newline PHYS\_StandardGRL\_All\_Good\_25ns.xml
-		%\item 2017(44.31\,\ifb): data17\_13TeV.periodAllYear\_DetStatus-v99-pro22-01\_Unknown\_ \newline PHYS\_StandardGRL\_All\_Good\_25ns\_Triggerno17e33prim.xml
-		%\item 2018(59.94\,\ifb): data18\_13TeV.periodAllYear\_DetStatus-v102-pro22-04\_Unknown\_PHYS\_ \newline StandardGRL\_All\_Good\_25ns\_Triggerno17e33prim.xml
-                \item 2015(3.2\,\ifb): data15\_13TeV.periodAllYear\_DetStatus-v89-pro21-02\_Unknown\_PHYS\\\_StandardGRL\_All\_Good\_25ns.xml
-        	\item 2016(33\,\ifb): data16\_13TeV.periodAllYear\_DetStatus-v89-pro21-01\_DQDefects-00-02-04\_PHYS\\\_StandardGRL\_All\_Good\_25ns.xml
-        	\item 2017(44.2\,\ifb): data17\_13TeV.periodAllYear\_DetStatus-v99-pro22-01\_Unknown\_PHYS\\\_StandardGRL\_All\_Good\_25ns\_JetHLT\_Normal2017.xml
-        	\item 2018(58.5\,\ifb): data18\_13TeV.periodAllYear\_DetStatus-v102-pro22-04\_Unknown\_PHYS\\\_StandardGRL\_All\_Good\_25ns\_Triggerno17e33prim.xml
-	\end{itemize}
-\item LAr: Liquid Argon Calorimeter error rejected ( errorState(xAOD::EventInfo::LAr) )
-\item Tile: Tile Calorimeter error rejected ( errorState(xAOD::EventInfo::Tile) )
-\item SCT: SCT single event upsets rejected ( errorState(xAOD::EventInfo::SCT) )
-\item Core: Incomplete event build rejected ( isEventFlagBitSet(xAOD::EventInfo::Core, 18) )
-\item All jets with $\pt\ge 150\,\GeV$ pass LooseBad cleaning cuts
-\item Primary Vertex: the highest $\sum\pt^{2}(trk)$ (xAOD::VxType::VertexType::PriVtx) vertex has at least two tracks associated with it
-\item Trigger: Passes the lowest unprescaled single-jet trigger, HLT\_j420
-\item Jet preselecton: Leading jet $\pt\ge 380\,\GeV$ and Jet multiplicity $\ge 2$
-\end{itemize}
+\subsection{Optimised selection}
 
-Additional kinematic selection criteria are used for the resonance to optimise the search potential and ensure good tracking efficiency. 
+In addition to the baseline selection cuts described in Section~\ref{sec:base_selection}, 
+the following cuts are applied to different regions to optimize the
+search potential and to ensure good tracking efficiency. 
 
-The following cuts are applied to the H$^\prime$ search.
+The following additional cuts are applied to the H$^\prime$ search.
 \begin{itemize}
-\item $|\Delta\phi| > 1.0$
 \item $|\ystar| < 0.6$
 \item $\mjj > 1100\,\GeV$
 \end{itemize}
 
-The following cuts are applied to the string resonance search.
+The following additional cuts are applied to the string resonance search.
 \begin{itemize}
 \item $|\ystar| < 0.8$
 \item $\mjj > 1200\,\GeV$
@@ -111,10 +85,23 @@ The following cuts are applied to the string resonance search.
 The above cuts define the inclusive samples.
 The following additional cuts are for quark-gluon tagging.
 \begin{itemize}
-\item $|\eta| < 0.21$ (both jets)
+\item $|\eta| < 2.1$ (both jets)
 \item $\ge 1$ gluon tagged (75\% working point)
 \item 2 gluons tagged (75\% working point)
 \end{itemize}
 
 \noindent
 where the 75\% gluon selection criteria is $n_\mathrm{track} > -7.3 + 4.2\ln(\pt)$.
+
+The cutflow tables obtained on full
+Run-2 data are presented in Table~\ref{tab:data1518totalcutflow} in Appendix~\ref{section:cutflow}, where as Tables~\ref{tab:data2015cutflow}-~\ref{tab:data2018cutflow} presents the cutflow separately for each year between 2015-2018. 
+The tables ~\ref{tab:bckgdcutflowMC16aWeighted} - ~\ref{tab:bckgdcutflowMC16eWeighted} in Appendix~\ref{section:cutflow} shows the cutflows 
+obtained on Pythia QCD MC separated into campaigns MC16a, MC16d and MC16e. The numbers shown in these tables 
+are weighted events normalised to the luminosity corresponding to each subcampaign.
+
+
+\subsection{Basic kinematic plots}
+\label{sec:kinematic_distributions}
+
+\clearpage
+
