--- a/include/appendix.tex
+++ b/include/appendix.tex
@@ -1,17 +1,22 @@
 % Data Samples
 \input{include/datasamples.tex}
+\clearpage
 
 %MC QCD Dijet Samples
 \input{include/qcddijetsamples.tex}
+\clearpage
 
 % MC String Samples
-\input{include/stringsamples.tex}
+\input{include/signalmcsamples.tex}
+\clearpage
 
 % String Amg;es
 \input{include/stringangles.tex}
+\clearpage
 
 % adding cutflow
 \input{include/cutflow.tex}
+\clearpage
 
 % BumpHunter Algorithm
 %\input{include/bumphunter.tex}
