--- a/include/datasamples.tex
+++ b/include/datasamples.tex
@@ -1,5 +1,5 @@
 \section{Data Samples}
-\label{section: data sample}
+\label{sec:datasample}
 
 In this analysis, the full data collected at $\sqrt{s} = 13$ TeV with the ATLAS Detector in 2015 and 2018 are used, corresponding to an integrated luminosity of 139 ~\ifb.
 All datasets have been produced using Athena release 21. 
