--- a/include/qcddijetsamples.tex
+++ b/include/qcddijetsamples.tex
@@ -1,5 +1,5 @@
 \section{Monte Carlo QCD Dijet Samples}
-\label{section: data sample}
+\label{sec:qcdsample}
 
 MC16 campaign consists of three sampels(mc16a, mc16d and mc16e) which are priduced for data15 data16, data17, data18, respectively. All events are full simulated and produced using Athena release 21.
 
